--- a/index.html
+++ b/index.html
@@ -355,11 +355,72 @@
     }
 
     window.onload = calcular;
-  </script>
-    <script>
+
+    function getApiBaseUrl() {
+  // Se estiver rodando no localhost, use a URL local do backend
+  if (window.location.hostname === "localhost" || window.location.hostname === "127.0.0.1") {
+    return "http://localhost:8000";
+  }
+  // Caso contrário, use a URL do backend deployado
+  return "https://calculadora-rvs.up.railway.app";
+}
+
+async function carregarIndices() {
+  try {
+    const baseUrl = getApiBaseUrl();
+    const response = await fetch(`${baseUrl}/indices`);
+    if (!response.ok) throw new Error('Erro ao buscar índices');
+    const dados = await response.json();
+
+    document.getElementById('selic').value = dados.selic || 0;
+    document.getElementById('cdi').value = dados.cdi * 100 || 0;
+    document.getElementById('ipca').value = dados.ipca * 100 || 0;
+    document.getElementById('tr').value = dados.tr || 0;
+
+    calcular(); // Recalcula após atualizar os valores
+  } catch (error) {
+    alert('Não foi possível atualizar os índices.');
+    console.error(error);
+  }
+}
+
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<script>
+  function incrementPeriodo() {
+    const periodoInput = document.getElementById('periodo');
+    periodoInput.value = parseInt(periodoInput.value || '0') + 1;
+    calcular();
+  }
+
+  function decrementPeriodo() {
+    const periodoInput = document.getElementById('periodo');
+    if (periodoInput.value > 0) {
+      periodoInput.value = parseInt(periodoInput.value) - 1;
+      calcular();
+    }
+  }
+
+  function valorFinalComAportes(P, A, i, n) {
+    if (i === 0) return P + A * n;
+    return P * Math.pow(1 + i, n) + A * (Math.pow(1 + i, n) - 1) / i;
+  }
+
+  function calcular() {
+    // Código da função calcular conforme enviado por você, sem alterações
+    // ...
+  }
+
+  function getApiBaseUrl() {
+    if (window.location.hostname === "localhost" || window.location.hostname === "127.0.0.1") {
+      return "http://localhost:8000";
+    }
+    return "https://calculadora-rvs.up.railway.app";
+  }
+
   async function carregarIndices() {
     try {
-      const response = await fetch('https://calculadora-rvs.up.railway.app/indices');
+      const baseUrl = getApiBaseUrl();
+      const response = await fetch(`${baseUrl}/indices`);
       if (!response.ok) throw new Error('Erro ao buscar índices');
       const dados = await response.json();
 
@@ -379,7 +440,17 @@
     carregarIndices();
     calcular();
   };
+</script>
   </script>
 </body>
 </html>
+<script>
+  window.onload = function() {
+    carregarIndices();
+    calcular();
+  };
+</script>
+</script>
+<script>
+  window.onload = calcular;
 
