--- a/index.html
+++ b/index.html
@@ -411,11 +411,11 @@ async function carregarIndices() {
   }
 
   function getApiBaseUrl() {
-    if (window.location.hostname === "localhost" || window.location.hostname === "127.0.0.1") {
-      return "http://localhost:8000";
-    }
-    return "https://calculadora-rvs.up.railway.app";
+  if (window.location.hostname === "localhost" || window.location.hostname === "127.0.0.1") {
+    return "http://localhost:8080";  // porta 8080
   }
+  return "https://calculadora-rvs.up.railway.app"; // produção
+}
 
   async function carregarIndices() {
     try {
