--- a/calculadorawsfront/index.html
+++ b/calculadorawsfront/index.html
@@ -382,73 +382,40 @@ async function carregarIndices() {
   }
 }
 
-<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-<script>
-  function incrementPeriodo() {
-    const periodoInput = document.getElementById('periodo');
-    periodoInput.value = parseInt(periodoInput.value || '0') + 1;
-    calcular();
-  }
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <script>
+    function getApiBaseUrl() {
+      if (window.location.hostname === "localhost" || window.location.hostname === "127.0.0.1") {
+        return "http://localhost:8080";
+      }
+      return "https://calculadora-rvs-production.up.railway.app"; // Produção
+    }
 
-  function decrementPeriodo() {
-    const periodoInput = document.getElementById('periodo');
-    if (periodoInput.value > 0) {
-      periodoInput.value = parseInt(periodoInput.value) - 1;
+    async function carregarIndices() {
+      try {
+        const baseUrl = getApiBaseUrl();
+        const response = await fetch(`${baseUrl}/indices`);
+        if (!response.ok) throw new Error('Erro ao buscar índices');
+        const dados = await response.json();
+
+        document.getElementById('selic').value = dados.selic || 0;
+        document.getElementById('cdi').value = (dados.cdi * 100).toFixed(4) || 0;
+        document.getElementById('ipca').value = (dados.ipca * 100).toFixed(4) || 0;
+        document.getElementById('tr').value = dados.tr || 0;
+
+        calcular();
+      } catch (error) {
+        alert('Não foi possível atualizar os índices automaticamente.');
+        console.error(error);
+      }
+    }
+
+    window.onload = function () {
+      carregarIndices();
       calcular();
-    }
-  }
-
-  function valorFinalComAportes(P, A, i, n) {
-    if (i === 0) return P + A * n;
-    return P * Math.pow(1 + i, n) + A * (Math.pow(1 + i, n) - 1) / i;
-  }
-
-  function calcular() {
-    // Código da função calcular conforme enviado por você, sem alterações
-    // ...
-  }
-
-  function getApiBaseUrl() {
-  if (window.location.hostname === "localhost" || window.location.hostname === "127.0.0.1") {
-    return "http://localhost:8080";  // porta 8080
-  }
-  return "https://calculadora-rvs.up.railway.app"; // produção
-}
-
-  async function carregarIndices() {
-    try {
-      const baseUrl = getApiBaseUrl();
-      const response = await fetch(`${baseUrl}/indices`);
-      if (!response.ok) throw new Error('Erro ao buscar índices');
-      const dados = await response.json();
-
-      document.getElementById('selic').value = dados.selic || 0;
-      document.getElementById('cdi').value = dados.cdi * 100 || 0;
-      document.getElementById('ipca').value = dados.ipca * 100 || 0;
-      document.getElementById('tr').value = dados.tr || 0;
-
-      calcular(); // Recalcula após atualizar os valores
-    } catch (error) {
-      alert('Não foi possível atualizar os índices.');
-      console.error(error);
-    }
-  }
-
-  window.onload = function() {
-    carregarIndices();
-    calcular();
-  };
-</script>
+    };
   </script>
 </body>
 </html>
-<script>
-  window.onload = function() {
-    carregarIndices();
-    calcular();
-  };
-</script>
-</script>
-<script>
-  window.onload = calcular;
+
 
