--- a/calculadorawsfront/index.html
+++ b/calculadorawsfront/index.html
@@ -360,11 +360,14 @@
   };
 
   function getApiBaseUrl() {
-    if (window.location.hostname === "localhost" || window.location.hostname === "127.0.0.1") {
-      return "http://localhost:8080";
-    }
-    return "https://calculadora-rvs-production.up.railway.app";
+  if (
+    window.location.hostname === "localhost" ||
+    window.location.hostname === "127.0.0.1"
+  ) {
+    return "http://localhost:8080";
   }
+  return "https://calculadora-rvs-production.up.railway.app";
+}
 
   async function carregarIndices() {
     try {
