--- a/calculadorawsfront/index.html
+++ b/calculadorawsfront/index.html
@@ -82,6 +82,71 @@
 </style>
 </head>
 <body>
+<button onclick="calcularInvestimento()">Calcular</button>
+<button onclick="exportarPDF()">Exportar PDF</button>
+<button onclick="exportarXLSX()">Exportar Excel</button>
+
+<div id="resultado"></div>
+<canvas id="grafico" width="400" height="200"></canvas>
+
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
+
+<script>
+function calcularInvestimento() {
+  const aporteMensal = parseFloat(document.getElementById("aporte").value) || 0;
+  const investimentoInicial = parseFloat(document.getElementById("inicial").value) || 0;
+  const meses = parseInt(document.getElementById("periodo").value) || 12;
+  const taxa = 1.3 / 100;
+
+  let valores = [];
+  let total = investimentoInicial;
+  for (let i = 0; i < meses; i++) {
+    total = total * (1 + taxa) + aporteMensal;
+    valores.push(total.toFixed(2));
+  }
+
+  document.getElementById("resultado").innerText = "Total final: R$ " + total.toFixed(2);
+
+  new Chart(document.getElementById("grafico"), {
+    type: 'line',
+    data: {
+      labels: Array.from({ length: meses }, (_, i) => `${i+1}º mês`),
+      datasets: [{
+        label: 'Evolução',
+        data: valores,
+        fill: false,
+        borderColor: 'blue',
+        tension: 0.1
+      }]
+    }
+  });
+
+  window.valoresExport = valores;
+}
+
+function exportarPDF() {
+  const { jsPDF } = window.jspdf;
+  const doc = new jsPDF();
+  doc.text("Simulação de Investimento", 10, 10);
+  window.valoresExport?.forEach((v, i) => {
+    doc.text(`${i + 1}º mês: R$ ${v}`, 10, 20 + i * 7);
+  });
+  doc.save("simulacao.pdf");
+}
+
+function exportarXLSX() {
+  const ws_data = [["Mês", "Valor"]];
+  window.valoresExport?.forEach((v, i) => {
+    ws_data.push([`${i + 1}`, parseFloat(v)]);
+  });
+  const wb = XLSX.utils.book_new();
+  const ws = XLSX.utils.aoa_to_sheet(ws_data);
+  XLSX.utils.book_append_sheet(wb, ws, "Simulação");
+  XLSX.writeFile(wb, "simulacao.xlsx");
+}
+</script>
   <h1>Calculadora de Renda Fixa com Gráficos</h1>
 
   <div class="grid">
