--- a/calculadorawsfront/index.html
+++ b/calculadorawsfront/index.html
@@ -6,93 +6,109 @@
 <title>Calculadora de Renda Fixa com Gráficos</title>
 <style>
   body {
-    font-family: Arial, sans-serif;
-    max-width: 900px;
-    margin: 2rem auto;
-    padding: 1.5rem;
-    background: #f9f9f9;
-    color: #222;
-  }
-  h1 {
-    color: #4a148c;
-    margin-bottom: 1rem;
-    text-align: center;
-  }
-  .grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fill,minmax(220px,1fr));
-    gap: 1rem;
-    margin-bottom: 1.5rem;
-  }
-  label {
-    font-weight: bold;
-    display: block;
-    margin-bottom: 0.3rem;
-  }
-  input[type=number], select {
-    width: 100%;
-    padding: 0.4rem 0.6rem;
-    font-size: 1rem;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-  }
-  .info-box {
-    background: white;
-    padding: 0.75rem 1rem;
-    border-radius: 6px;
-    box-shadow: 0 0 5px rgba(0,0,0,0.05);
-  }
-  .info-title {
-    font-weight: 600;
-    margin-bottom: 0.2rem;
-    color: #4a148c;
-  }
-  .period-controls {
-    display: flex;
-    gap: 0.5rem;
-    align-items: center;
-  }
-  .period-controls button {
-    width: 30px;
-    font-weight: bold;
-    font-size: 1.2rem;
-    cursor: pointer;
-  }
-  .result {
-    background: #e1bee7;
-    padding: 1rem 1.2rem;
-    border-radius: 8px;
-    font-weight: 700;
-    font-size: 1.2rem;
-    color: #2e0854;
-    margin-bottom: 2rem;
-  }
-  .btn-bar {
-    display: flex;
-    justify-content: center;
-    gap: 1rem;
-    margin-bottom: 1.5rem;
-  }
-  .btn-bar button {
-    background: #4a148c;
-    color: white;
-    padding: 0.5rem 1rem;
-    border: none;
-    border-radius: 6px;
-    cursor: pointer;
-  }
-  footer {
-    margin-top: 3rem;
-    text-align: center;
-    font-weight: bold;
-    font-size: 1rem;
-    color: #4a148c;
-  }
-  canvas {
-    background: white;
-    border-radius: 8px;
-    box-shadow: 0 0 10px #ccc;
-  }
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  background: #f9f9f9;
+  color: #222;
+}
+
+h1 {
+  color: #4a148c;
+  margin: 1rem;
+  text-align: center;
+}
+
+.container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 2rem;
+  padding: 1rem;
+  flex-wrap: nowrap;
+}
+
+.form-section {
+  background: #ede7f6;
+  padding: 1.5rem;
+  border-radius: 10px;
+  width: 420px;
+  flex-shrink: 0;
+}
+
+.chart-section {
+  flex-grow: 1;
+  background: white;
+  border-radius: 10px;
+  box-shadow: 0 0 10px #ccc;
+  padding: 1rem;
+  max-width: 700px;
+}
+
+canvas {
+  width: 100% !important;
+  height: 400px !important;
+}
+
+label {
+  font-weight: bold;
+  display: block;
+  margin-top: 0.8rem;
+}
+
+input[type=number], select {
+  width: 100%;
+  padding: 0.4rem 0.6rem;
+  font-size: 1rem;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+.period-controls {
+  display: flex;
+  gap: 0.5rem;
+  align-items: center;
+}
+
+.period-controls button {
+  width: 30px;
+  font-weight: bold;
+  font-size: 1.2rem;
+  cursor: pointer;
+}
+
+.btn-bar {
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
+  margin: 1.5rem 0;
+}
+
+.btn-bar button {
+  background: #4a148c;
+  color: white;
+  padding: 0.5rem 1rem;
+  border: none;
+  border-radius: 6px;
+  cursor: pointer;
+}
+
+#resultado {
+  margin-top: 1rem;
+  font-size: 1rem;
+  background: #e1bee7;
+  padding: 1rem;
+  border-radius: 8px;
+}
+
+footer {
+  margin-top: 2rem;
+  text-align: center;
+  font-weight: bold;
+  font-size: 1rem;
+  color: #4a148c;
+}
 </style>
 </head>
 <body>
